source/release/3.3.4/testing.html.md
---
title: Ovirt 3.3.4 testing
authors: sandrobonazzola
wiki_title: Testing/Ovirt 3.3.4 testing
wiki_revision_count: 3
wiki_last_updated: 2014-02-28
---

# Ovirt 3.3.4 testing

## What to do as a participant

*   Look at [OVirt_3.3_TestDay](OVirt_3.3_TestDay) for understanding what should be tested
*   Update the Participants section.
*   Run into any issues? Report it on IRC, user mailing list, or bugzilla.

## Participants

Test Days are open to anyone.

If you have your own setup, we will provide all the software packages and the required information.

If you're willing to participate, please add yourself to the table below:

| Name                                               | part tested                       | Storage | Networking | Distribution | Bugs |
|----------------------------------------------------|-----------------------------------|---------|------------|--------------|------|
| [SandroBonazzola](User:SandroBonazzola) | engine-setup , clean install, AIO | NFS     | basic      | Fedora 19    | -    |
| [SandroBonazzola](User:SandroBonazzola) | engine-iso-uploader               | NFS     | basic      | Fedora 19    | -    |
